maps integration
smaller tilez

spit tiles

ignore

type and untested tests

archive unarchive

better repo layer and usecase

update libraries, swipe

aaaa

routing

not manager and model

untested parser

map integration

android launcher icons

splash logo

settings navigation and theme settings

app scafolding

di

fix fonts

theme and libs

map stuff wip

kind of workign offline map

offline maps

ignore update